# hyprland-workspace-rename

./: Cargo.toml  README  rename_workspaces.toml
src/: main.rs
