[package]
name = "hyprland-workspace-rename"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
dirs-next = "2.0.0"
hyprland = "0.4.0-alpha.2"
serde = { version = "1.0.164", features = ["derive"] }
